Fixed overflow hidden for toolbar

--- a/packages/survey-creator-v2/src/components/creator.scss
+++ b/packages/survey-creator-v2/src/components/creator.scss
@@ -34,7 +34,7 @@ survey-creator {
   display: flex;
   width: 100%;
   height: 100%;
-  overflow-y: auto;
+  overflow: hidden;
 }
 
 .svc-creator-tab__content {
