--- a/packages/survey-creator-v2/src/components/toolbox/toolbox.scss
+++ b/packages/survey-creator-v2/src/components/toolbox/toolbox.scss
@@ -7,16 +7,12 @@ svc-toolbox {
 
 .svc-toolbox {
   height: 100%;
-  overflow-y: auto;
-  overflow-x: visible;
-  direction: rtl;
 }
 
 .svc-toolbox__category {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  direction: initial;
 }
 
 .svc-toolbox__category-separator {
